--- a/MyNewSpring/src/main/resources/application.properties
+++ b/MyNewSpring/src/main/resources/application.properties
@@ -31,12 +31,12 @@ spring.datasource.initialization-mode=always
 #spring.datasource.initialization-mode=always
 
 # Path to project
-project.base-dir=file:///C:/Users/owner/eclipse-workspacenew09/MyNewSpring
+project.base-dir=file:///C:/Users/owner/git/mynewspringrepo/MyNewSpring/
 
 # Templates reloading during development
 spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
 spring.thymeleaf.cache=false
-
+logging.level.org.springframework.web=DEBUG
 # Static resources reloading during development
 spring.resources.static-locations=${project.base-dir}/src/main/resources/static/,${project.base-dir}/src/main/resources/
 
