--- a/MyNewSpring/src/main/resources/application.properties
+++ b/MyNewSpring/src/main/resources/application.properties
@@ -31,16 +31,25 @@ spring.datasource.initialization-mode=always
 #spring.datasource.initialization-mode=always
 
 # Path to project
-project.base-dir=file:///C:/Users/owner/git/mynewspringrepo/MyNewSpring/
+#project.base-dir=file:///C:/Users/owner/git/mynewspringrepo/MyNewSpring/
 
 # Templates reloading during development
-spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
+#spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
 spring.thymeleaf.cache=false
 logging.level.org.springframework.web=DEBUG
 # Static resources reloading during development
-spring.resources.static-locations=${project.base-dir}/src/main/resources/static/,${project.base-dir}/src/main/resources/
+#spring.resources.static-locations=${project.base-dir}/src/main/resources/static/,${project.base-dir}/src/main/resources/
 
 
+
+
+
+#spring.mvc.static-path-pattern=/resources/**
+
+
+
+
+spring.resources.static-locations=classpath:/resources/ # Locations of static resources.
 #spring.jpa.generate-ddl=true
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
