--- a/MyNewSpring/src/main/resources/application.properties
+++ b/MyNewSpring/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#spring.datasource.url=jdbc:mysql://localhost:3306/travel1?useLegacyDatetimeCode=false&serverTimezone=Asia/Jerusalem&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true
+#spring.datasource.username=root
+#spring.datasource.password=qwqw
 spring.datasource.url=jdbc:mysql://mytrips81.coizdbobchof.us-east-1.rds.amazonaws.com:3306/travel1?useLegacyDatetimeCode=false&serverTimezone=Asia/Jerusalem&useSSL=false
 spring.datasource.username=ilia
 spring.datasource.password=rds8811b
